--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,5 @@
 @import url("/styles/shoelace.css");
 @import url("/styles/tokens.css");
 @import url("/styles/themes.css");
+@import url("/styles/main.css");
+@import url("/styles/tokens.dark.css");
