--- a/components/shoelace/tag/tag.html
+++ b/components/shoelace/tag/tag.html
@@ -1,4 +1,5 @@
 <!-- components/shoelace/tag/tag.html -->
 <sl-tag class="sl-tag" x-data="tagComponent()" data-component="shoelace-tag">
+  <slot name="icon" part="icon" aria-hidden="true"></slot>
   <slot></slot>
 </sl-tag>
